# lab_2_game

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  test.cpp
.github/workflows/: c-cpp.yml  cpp.yml
architecture/: Class Diagramm description.md  Component Diagram Description.md  Description of the system design.md  System requirments.md  Test Plan.md
src/: main.cpp
src/characters/: character.cpp  character.h  main_char.cpp  main_char.h  opponent.cpp  opponent.h
src/inventory/: inventory.cpp  inventory.h
src/inventory/bag/: bag.cpp  bag.h
src/inventory/coins/: coins.cpp  coins.h
src/inventory/equipment/: equipment.cpp  equipment.h
src/inventory/potion/: potion.cpp  potion.h
src/inventory/weapon/: weapon.cpp  weapon.h
src/shop/: shop.cpp  shop.h
src/utils/: slot_of_equipment.h  slot_of_potion.h  slot_of_weapon.h  war_style.h
tests/: test.cpp
